--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
     />
     <link rel="stylesheet" href="https://unpkg.com/primereact/resources/primereact.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/primeflex@3.2.1/primeflex.min.css" />
-    <title>React App</title>
+    <title>Go shoes app</title>
   </head>
   <body  style="margin: 0;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
